<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="horizontal"
    android:weightSum="100" >

    <Button
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="20"
        android:drawableLeft="@drawable/menu_icon_map"
        android:minWidth="100sp"
        android:onClick="menuButtonClick"
        android:text="@string/table_map_menu"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnInvoice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="20"
        android:drawableLeft="@drawable/menu_icon_invoice"
        android:minWidth="100sp"
        android:onClick="menuButtonClick"
        android:text="@string/invoice_menu"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="20"
        android:drawableLeft="@drawable/menu_icon_setting"
        android:minWidth="100sp"
        android:onClick="menuButtonClick"
        android:text="@string/setting_menu"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTrackingMap"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="20"
        android:drawableLeft="@drawable/menu_icon_google"
        android:minWidth="100sp"
        android:onClick="menuButtonClick"
        android:text="@string/strackingmap"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin_Out"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="20"
        android:drawableLeft="@drawable/menu_icon_login"
        android:minWidth="100sp"
        android:onClick="menuButtonClick"
        android:text="@string/login_out"
        android:textStyle="bold" />

</LinearLayout>