<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoicecode"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoicetimein"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername33"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoicetimeout"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="200dip"
                android:layout_height="30dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoiceaddress"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername33"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoicephone"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground"
                android:inputType="phone" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername33"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="33"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbackground" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:layout_width="80dip"
            android:layout_height="45dip"
            android:layout_gravity="center"
            android:background="@drawable/buttonbackground"
            android:text="  OK  " />

        <Button
            android:layout_width="80dip"
            android:layout_height="45dip"
            android:layout_gravity="center"
            android:layout_marginLeft="100dip"
            android:background="@drawable/buttonbackground"
            android:text="  CANCEL  " />
    </LinearLayout>

</LinearLayout>