<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- Above Layout (Input user infor) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:orientation="vertical"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="300dip"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoicecode"
                android:textSize="15dip"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editinvoicecode"
                android:layout_width="300dip"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoicetimein"
                android:textSize="15dip"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/invoicetimein"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:enabled="false" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoicetimeout"
                android:textSize="15dip"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/invoicetimeout"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:enabled="false" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <!-- down Layout (display item infor) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dip"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <!-- Insert list item here -->

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titleinvoice"
            android:textSize="20dip"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="24"
                android:text="INDEX"
                android:textSize="20dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:text="NAME"
                android:textSize="20dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="22"
                android:text="               UNIT"
                android:textSize="20dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="17"
                android:text="AMOUNT"
                android:textSize="20dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="17"
                android:text="COST"
                android:textSize="20dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="17"
                android:text="NOTES"
                android:textSize="20dip"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip" >
        </ListView>

       <!--  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@android:color/background_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="VAS :"
                android:textSize="20dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TOTAL :"
                android:textSize="20dip"
                android:textStyle="bold" />
        </LinearLayout>
 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="  PRINT  " />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dip"
                android:text="  VIEWER  " />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>